# computer-graphics-kinematics

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
